--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "cross-env": "^7.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.2.1",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
@@ -29,7 +29,8 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/node": "^14.14.31",
-    "@types/react-router-dom": "^5.1.7",
+    "@types/react-router": "^5.1.16",
+    "@types/react-router-dom": "^5.1.8",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.0.3",
     "babel-loader": "^8.2.2",
